[gd_scene load_steps=4 format=3 uid="uid://fc57vtai3d2o"]

[ext_resource type="Script" path="res://Scene Setup/game_over.gd" id="1_bo4ch"]
[ext_resource type="Texture2D" uid="uid://b51kblvwrxq3d" path="res://Assets/MainMenu.png" id="2_0lvp2"]
[ext_resource type="Texture2D" uid="uid://cly51rnm4pvsn" path="res://Assets/Restart.png" id="3_3br0w"]

[node name="GameOver" type="Node2D"]
z_index = 5
script = ExtResource("1_bo4ch")

[node name="MainMenu2" type="Sprite2D" parent="."]
position = Vector2(312, 440)
texture = ExtResource("2_0lvp2")
metadata/_edit_lock_ = true

[node name="Restart2" type="Sprite2D" parent="."]
position = Vector2(834, 439)
texture = ExtResource("3_3br0w")
metadata/_edit_lock_ = true

[node name="MainMenu" type="Button" parent="."]
offset_left = 144.0
offset_top = 395.0
offset_right = 480.0
offset_bottom = 485.0
flat = true
metadata/_edit_lock_ = true

[node name="Restart" type="Button" parent="."]
offset_left = 670.0
offset_top = 394.0
offset_right = 1007.0
offset_bottom = 484.0
flat = true
metadata/_edit_lock_ = true

[connection signal="button_down" from="MainMenu" to="." method="_on_main_menu_button_down"]
[connection signal="button_up" from="MainMenu" to="." method="_on_main_menu_button_up"]
[connection signal="button_down" from="Restart" to="." method="_on_restart_button_down"]
[connection signal="button_up" from="Restart" to="." method="_on_restart_button_up"]
